--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         .hero-section {
             background: url('brickell.jpg') no-repeat center center;
             background-size: cover;
-            color: white;
+            color: #000080;
             padding: 100px 0;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
         }
