--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Resume Writing</a>
+            <a class="navbar-brand" href="#">Resume 305</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -72,37 +72,15 @@
         </div>
     </section>
 
-    <!-- Upwork Profile Section -->
-    <section id="about" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Why Choose Us</h2>
-            <div class="row">
-                <div class="col-md-4 text-center">
-                    <i class="fas fa-check-circle fa-3x text-success mb-3"></i>
-                    <h5>Customized Resumes</h5>
-                    <p>We craft resumes tailored to your skills, achievements, and career goals to make you stand out.</p>
-                </div>
-                <div class="col-md-4 text-center">
-                    <i class="fas fa-briefcase fa-3x text-primary mb-3"></i>
-                    <h5>All Professions & Levels</h5>
-                    <p>Whether you’re starting your career or aiming for the executive suite, we’ve got you covered.</p>
-                </div>
-                <div class="col-md-4 text-center">
-                    <i class="fas fa-map-pin fa-3x text-danger mb-3"></i>
-                    <h5>Proven Results</h5>
-                    <p>Our resumes have helped clients land interviews at top companies across industries worldwide.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- About Us Section -->
     <section id="about" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Are You Ready to Land Your Dream Job?</h2>
             <p class="lead text-center">
-                I’m here to help you stand out with a professionally crafted resume that opens doors and gets results. 
-                With years of experience as a professional resume writer, I specialize in creating tailored resumes for individuals 
+                We're here to help you stand out with a professionally crafted resume that opens doors and gets results. 
+                I specialize in creating tailored resumes for individuals 
                 at all skill levels—from entry-level graduates to seasoned executives.
             </p>
             <div class="row mt-5">
@@ -116,10 +94,7 @@
                             <i class="fas fa-check-circle text-success"></i> <strong>All Professions and Industries:</strong> From IT and healthcare to marketing, finance, education, and more—I have successfully created resumes across diverse industries.
                         </li>
                         <li class="mb-3">
-                            <i class="fas fa-check-circle text-success"></i> <strong>Career Levels:</strong> Whether you’re a recent graduate, mid-level professional, or C-suite executive, I’ll present your qualifications in the best possible light.
-                        </li>
-                        <li class="mb-3">
-                            <i class="fas fa-check-circle text-success"></i> <strong>ATS Optimization:</strong> I use modern formatting and keyword strategies to ensure your resume passes Applicant Tracking Systems (ATS) and reaches the recruiter’s desk.
+                            <i class="fas fa-check-circle text-success"></i> <strong>Career Levels:</strong> Whether you’re a recent graduate, mid-level professional, or writing your first resume, I’ll present your qualifications in the best possible light.
                         </li>
                         <li class="mb-3">
                             <i class="fas fa-check-circle text-success"></i> <strong>Cover Letters and LinkedIn Profiles:</strong> Enhance your application with a compelling cover letter and a LinkedIn profile that aligns with your career goals.
@@ -127,7 +102,7 @@
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <h4>Why Work with Me?</h4>
+                    <h4>Why Work with Us?</h4>
                     <ul class="list-unstyled">
                         <li class="mb-3">
                             <i class="fas fa-map-pin text-danger"></i> <strong>Dedicated to Your Success:</strong> I am committed to helping you present your skills and achievements in the best possible way to impress potential employers.
@@ -144,7 +119,29 @@
         </div>
     </section>
 
-
+    <!-- Upwork Profile Section -->
+    <section id="about" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Why Choose Us</h2>
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <i class="fas fa-check-circle fa-3x text-success mb-3"></i>
+                    <h5>Customized Resumes</h5>
+                    <p>We craft resumes tailored to your skills, achievements, and career goals to make you stand out.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="fas fa-briefcase fa-3x text-primary mb-3"></i>
+                    <h5>All Professions & Levels</h5>
+                    <p>Whether you’re starting your career or aiming for the executive suite, we’ve got you covered.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <i class="fas fa-trophy fa-3x mb-3" style="color: gold;"></i>
+                    <h5>Dedicated to your Success</h5>
+                    <p>We're committed to helping you present your skills and achievements in the best possible way to impress potential employers.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Services Section -->
     <section id="services" class="services text-center">
@@ -188,8 +185,8 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-form">
         <div class="container">
-            <h2 class="mb-5 text-center">Contact Us</h2>
-            <h3 class="mb-5 text-center">Please fill out the form below and we'll be in contact with you shortly!</h3>
+            <h2 class="mb-5 text-center">Get in Touch With Us</h2>
+            <p class="mb-5 text-center">We'd love to hear from you so please fill out the form below and we'll be in contact with you shortly!</p>
             <!-- Contact Form (Formspree integration) -->
             <form action="https://formspree.io/f/xkggbope" method="POST">
                 <div class="row">
@@ -222,7 +219,15 @@
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="service" id="service2" value="Resume + Cover Letter" required>
-                                <label class="form-check-label" for="service2">Resume + Cover Letter</label>
+                                <label class="form-check-label" for="service2">Cover Letter</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="service" id="service3" value="Resume + Cover Letter + LinkedIn Profile" required>
+                                <label class="form-check-label" for="service3">LinkedIn Profile</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="service" id="service3" value="Resume + Cover Letter + LinkedIn Profile" required>
+                                <label class="form-check-label" for="service3">Resume + Cover Letter</label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="service" id="service3" value="Resume + Cover Letter + LinkedIn Profile" required>
