Add pricing and reformat

--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         .hero-section {
             background: url('brickell.jpg') no-repeat center center;
             background-size: cover;
-            color: #000080;
+            color: white;
             padding: 100px 0;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        }
+
+        .hero-section .container {
+            background-color: rgba(173, 216, 230, 0.8); /* Light blue background with some transparency */
+            padding: 40px;
+            border-radius: 10px; /* Optional: Adds rounded corners to the background */
         }
         .services {
             padding: 60px 0;
@@ -29,6 +35,10 @@
         }
         .contact-form {
             padding: 60px 0;
+        }
+        .pricing-section {
+            padding: 60px 0;
+            background-color: #f8f9fa;
         }
         .navbar {
             position: sticky;
@@ -77,10 +87,10 @@
     <!-- About Us Section -->
     <section id="about" class="py-5">
         <div class="container">
-            <h2 class="text-center mb-4">Are You Ready to Land Your Dream Job?</h2>
+            <h2 class="text-center mb-4">Are You Ready to Take Your Resume to the Next Level?</h2>
             <p class="lead text-center">
                 We're here to help you stand out with a professionally crafted resume that opens doors and gets results. 
-                I specialize in creating tailored resumes for individuals 
+                We specialize in creating tailored resumes for individuals 
                 at all skill levels—from entry-level graduates to seasoned executives.
             </p>
             <div class="row mt-5">
@@ -119,6 +129,82 @@
         </div>
     </section>
 
+    <!-- Pricing Section -->
+    <section id="pricing" class="pricing py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Our Services</h2>
+            <div class="row">
+                <!-- Basic Plan Card -->
+                <div class="col-md-4">
+                    <div class="card shadow-lg border-0 rounded-lg mb-4">
+                        <div class="card-header text-center bg-primary text-white">
+                            <h3 class="card-title">Basic Plan</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-price text-center">$99</h4>
+                            <p class="text-center">Perfect for individuals who need a professional resume to get started.</p>
+                            <ul class="list-unstyled">
+                                <li>1 Customized Resume</li>
+                                <li>1 Revision</li>
+                                <li>1 PDF & Word Format</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer text-center">
+                            <a href="#contact" class="btn btn-primary">Get Started</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Standard Plan Card -->
+                <div class="col-md-4">
+                    <div class="card shadow-lg border-0 rounded-lg mb-4">
+                        <div class="card-header text-center bg-success text-white">
+                            <h3 class="card-title">Advanced Plan</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-price text-center">$149</h4>
+                            <p class="text-center">Ideal for professionals looking to take their career to the next level.</p>
+                            <ul class="list-unstyled">
+                                <li>1 Customized Resume</li>
+                                <li>1 Cover Letter</li>
+                                <li>2 Revisions</li>
+                                <li>PDF & Word Format</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer text-center">
+                            <a href="#contact" class="btn btn-success">Get Started</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Premium Plan Card -->
+                <div class="col-md-4">
+                    <div class="card shadow-lg border-0 rounded-lg mb-4">
+                        <div class="card-header text-center bg-warning text-white">
+                            <h3 class="card-title">Premium Plan</h3>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-price text-center">$199</h4>
+                            <p class="text-center">For those who want to go all-in and stand out in any industry.</p>
+                            <ul class="list-unstyled">
+                                <li>1 Customized Resume</li>
+                                <li>1 Cover Letter</li>
+                                <li>LinkedIn Profile Optimization</li>
+                                <li>3 Revisions</li>
+                                <li>PDF, Word, & LinkedIn Format</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer text-center">
+                            <a href="#contact" class="btn btn-warning">Get Started</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
     <!-- Upwork Profile Section -->
     <section id="about" class="py-5">
         <div class="container">
@@ -138,45 +224,6 @@
                     <i class="fas fa-trophy fa-3x mb-3" style="color: gold;"></i>
                     <h5>Dedicated to your Success</h5>
                     <p>We're committed to helping you present your skills and achievements in the best possible way to impress potential employers.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="services text-center">
-        <div class="container">
-            <h2 class="mb-5">Our Services</h2>
-            <div class="row">
-                <!-- Resume Writing Card -->
-                <div class="col-md-4">
-                    <div class="card d-flex flex-column">
-                        <img src="https://images.pexels.com/photos/3740744/pexels-photo-3740744.jpeg" class="card-img-top" alt="Resume Writing">
-                        <div class="card-body">
-                            <h5 class="card-title">Resume Writing</h5>
-                            <p class="card-text">Get a professionally crafted resume that highlights your strengths and experience.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Cover Letter Writing Card -->
-                <div class="col-md-4">
-                    <div class="card d-flex flex-column">
-                        <img src="https://images.pexels.com/photos/3183183/pexels-photo-3183183.jpeg" class="card-img-top" alt="Cover Letter Writing">
-                        <div class="card-body">
-                            <h5 class="card-title">Cover Letter Writing</h5>
-                            <p class="card-text">A personalized cover letter that complements your resume and sets you apart from other applicants.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- LinkedIn Profile Optimization Card -->
-                <div class="col-md-4">
-                    <div class="card d-flex flex-column">
-                        <img src="https://images.pexels.com/photos/1181354/pexels-photo-1181354.jpeg" class="card-img-top" alt="LinkedIn Optimization">
-                        <div class="card-body">
-                            <h5 class="card-title">LinkedIn Optimization</h5>
-                            <p class="card-text">Enhance your LinkedIn profile with optimized keywords and engaging content to attract recruiters.</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -214,30 +261,22 @@
                         <div class="form-group">
                             <label for="service">Services Interested In</label><br>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="service" id="service1" value="Resume Writing" required>
-                                <label class="form-check-label" for="service1">Resume Writing</label>
+                                <input class="form-check-input" type="radio" name="service" id="service1" value="Basic" required>
+                                <label class="form-check-label" for="service1">Basic</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="service" id="service2" value="Resume + Cover Letter" required>
-                                <label class="form-check-label" for="service2">Cover Letter</label>
+                                <input class="form-check-input" type="radio" name="service" id="service2" value="Advanced" required>
+                                <label class="form-check-label" for="service2">Advanced</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="service" id="service3" value="Resume + Cover Letter + LinkedIn Profile" required>
-                                <label class="form-check-label" for="service3">LinkedIn Profile</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="service" id="service3" value="Resume + Cover Letter + LinkedIn Profile" required>
-                                <label class="form-check-label" for="service3">Resume + Cover Letter</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="service" id="service3" value="Resume + Cover Letter + LinkedIn Profile" required>
-                                <label class="form-check-label" for="service3">Resume + Cover Letter + LinkedIn Profile</label>
+                                <input class="form-check-input" type="radio" name="service" id="service3" value="Premium" required>
+                                <label class="form-check-label" for="service3">Premium</label>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="message">Your Message</label>
+                    <label for="message">Any other details you want to provide</label>
                     <textarea class="form-control" id="message" name="message" rows="4" placeholder="Write your message here" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Send Message</button>
@@ -247,7 +286,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
-        <p>&copy; 2024 Resume Writing Services. All Rights Reserved.</p>
+        <p>Resume 305</p>
     </footer>
 
     <!-- Bootstrap JS & Dependencies -->
